# rasteriser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  build.sh  main.c  run.sh  runSDL.sh  runTerminal.sh  setup.sh  sr.h  sr_2d.c  sr_2d.h  sr_3d.c  sr_3d.h  sr_common.h  sr_console_context.c  sr_context.h  sr_math.c  sr_math.h
sr/: sr.h  sr3D.c  sr3D.h  srColour.c  srColour.h  srCommon.h  srContext.h  srContextSDL.c  srContextTerminal.c  srContext_Console.c  srContext_Terminal.c  srFrameBuffer.c  srFrameBuffer.h  srRasteriser.c  srRasteriser.h  srShapes.c  srShapes.h
src/: main.c
src/sr/: sr.h  srColour.c  srColour.h  srCommon.h  srContext.h  srContextSDL.c  srContextSDL.h  srContextTerm.c  srContextTerm.h  srContextTerminal.c  srFrameBuffer.c  srFrameBuffer.h  srMain.c  srMain.h  srRasteriser.c  srRasteriser.h
